<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_main_page">My NanoDegree Apps</string>
    <string name="button_reader_text">Reader</string>
    <string name="button_scores_text">Football Scores</string>
    <string name="button_spotify_text">Spotify Streamer</string>
    <string name="button_library_text">Library</string>
    <string name="button_capstone_text">Capstone</string>
    <string name="button_bigger_text">Build It Bigger</string>

</resources>
