<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_main_page"
        android:id="@+id/textView_title"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical" />

    <Button
        style="@style/PortfolioButtom"
        android:text="@string/button_reader_text"
        android:id="@+id/button_reader"
        android:onClick="onClickButton" />

    <Button
        style="@style/PortfolioButtom"
        android:text="@string/button_spotify_text"
        android:id="@+id/button_spotify"
        android:onClick="onClickButton" />

    <Button
        style="@style/PortfolioButtom"
        android:text="@string/button_scores_text"
        android:id="@+id/button_scores"
        android:onClick="onClickButton" />

    <Button
        style="@style/PortfolioButtom"
        android:text="@string/button_library_text"
        android:id="@+id/button_library"
        android:onClick="onClickButton" />

    <Button
        style="@style/PortfolioButtom"
        android:text="@string/button_bigger_text"
        android:id="@+id/button_bigger"
        android:onClick="onClickButton" />

    <Button
        style="@style/AccentPortfolioButtom"
        android:text="@string/button_capstone_text"
        android:id="@+id/button_capstone"
        android:onClick="onClickButton"
        android:nestedScrollingEnabled="true" />

</LinearLayout>
